--- a/portfolio.html
+++ b/portfolio.html
@@ -50,11 +50,21 @@
                     <iframe title="Kart" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/923ac1fa7ccd4c6387bd664dc32eeb52/embed"> </iframe> <p style="font-size: 13px; font-weight: normal; margin: 5px; color: #4A4A4A;"> <a href="https://sketchfab.com/3d-models/kart-923ac1fa7ccd4c6387bd664dc32eeb52?utm_medium=embed&utm_campaign=share-popup&utm_content=923ac1fa7ccd4c6387bd664dc32eeb52" target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;"> Kart </a> by <a href="https://sketchfab.com/Mohitmalve07?utm_medium=embed&utm_campaign=share-popup&utm_content=923ac1fa7ccd4c6387bd664dc32eeb52" target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;"> Mohitmalve07 </a> on <a href="https://sketchfab.com?utm_medium=embed&utm_campaign=share-popup&utm_content=923ac1fa7ccd4c6387bd664dc32eeb52" target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;">Sketchfab</a></p>
                 </div>
             </div>
+
+            <div class="model-item">
+                <h2>Weapon - Chakram</h2>
+                <div class="sketchfab-embed-wrapper"> <iframe title="Weapon" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/40594de0dd98499888e66b964613a2d1/embed"> </iframe> <p style="font-size: 13px; font-weight: normal; margin: 5px; color: #4A4A4A;"> <a href="https://sketchfab.com/3d-models/weapon-40594de0dd98499888e66b964613a2d1?utm_medium=embed&utm_campaign=share-popup&utm_content=40594de0dd98499888e66b964613a2d1" target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;"> Weapon </a> by <a href="https://sketchfab.com/Mohitmalve07?utm_medium=embed&utm_campaign=share-popup&utm_content=40594de0dd98499888e66b964613a2d1" target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;"> Mohitmalve07 </a> on <a href="https://sketchfab.com?utm_medium=embed&utm_campaign=share-popup&utm_content=40594de0dd98499888e66b964613a2d1" target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;">Sketchfab</a></p></div>
+            </div>
+
+            <div class="model-item">
+                <h2>Weapon - Longsword</h2>
+                <div class="sketchfab-embed-wrapper"> <iframe title="Longsword" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/24092afb1c594b8890a6288553695982/embed"> </iframe> <p style="font-size: 13px; font-weight: normal; margin: 5px; color: #4A4A4A;"> <a href="https://sketchfab.com/3d-models/longsword-24092afb1c594b8890a6288553695982?utm_medium=embed&utm_campaign=share-popup&utm_content=24092afb1c594b8890a6288553695982" target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;"> Longsword </a> by <a href="https://sketchfab.com/Mohitmalve07?utm_medium=embed&utm_campaign=share-popup&utm_content=24092afb1c594b8890a6288553695982" target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;"> Mohitmalve07 </a> on <a href="https://sketchfab.com?utm_medium=embed&utm_campaign=share-popup&utm_content=24092afb1c594b8890a6288553695982" target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;">Sketchfab</a></p></div>
+            </div>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2025 [Your Name]. All rights reserved.</p>
+        <p>&copy; 2025 Mohit Malve. All rights reserved.</p>
     </footer>
 
     <script src="script.js"></script>
