--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 [Your Name]. All rights reserved.</p>
+        <p>&copy; 2025 Mohit Malve. All rights reserved.</p>
     </footer>
 
     <script src="script.js"></script>
