--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My 3D Portfolio - Contact</title>
-    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="theme.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -29,7 +29,7 @@
         <section class="contact-info">
             <p>I'm always open to new opportunities and collaborations. Feel free to reach out!</p>
             <p>Email: <a href="mailto:malve.mohit1234@gmail.com">malve.mohit1234@gmail.com</a></p>
-            <p>Phone: +917620673548</p>
+            <p>Secondary Email: <a href="mailto:mohit.22211407@viit.ac.in">mohit.22211407@viit.ac.in</a></p>
             <div class="social-links">
                 <a href="https://linkedin.com/in/mohit-malve-08b58625b" target="_blank">LinkedIn</a>
                 <!-- Add more social media links as needed -->
